// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`portfolio tests shows portfolio overview with one account 1`] = `
"<div class=\\"portfolio-overview\\">
  <div class=\\"portfolio-overview-card card\\"><span class=\\"card-label\\">At a glance</span>
    <ul class=\\"portfolio-stats-list\\">
      <li class=\\"portfolio-stats-account-name\\">In <a href=\\"\\">test account</a> account:</li>
      <li>Total Cash: -16584.76 €</li>
      <li>Total Assets: 25874.64 €</li>
      <li>Portfolio Value: 9289.88 €</li>
    </ul>
  </div>
  <div class=\\"card\\"><span class=\\"card-label\\">Assets</span>
    <div class=\\"assets-overview-content\\">
      <div>3 <a href=\\"#/positions\\">Positions</a> in 1 Account</div>
      <div>15 <a href=\\"#/transactions\\">Transactions</a></div>
    </div><a class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary\\" tabindex=\\"0\\" aria-disabled=\\"false\\" href=\\"#/transactions/record\\"><span class=\\"MuiButton-label\\"><span class=\\"material-icons MuiIcon-root\\" aria-hidden=\\"true\\">create</span>Record transaction</span><span class=\\"MuiTouchRipple-root\\"></span></a>
  </div>
</div>"
`;

exports[`portfolio tests shows portfolio overview with two accounts 1`] = `
"<div class=\\"portfolio-overview\\">
  <div class=\\"portfolio-overview-card card\\"><span class=\\"card-label\\">At a glance</span>
    <ul class=\\"portfolio-stats-list\\">
      <li class=\\"portfolio-stats-account-name\\">In <a href=\\"\\">test account</a> account:</li>
      <li>Total Cash: -16584.76 €</li>
      <li>Total Assets: 25874.64 €</li>
      <li>Portfolio Value: 9289.88 €</li>
    </ul>
    <ul class=\\"portfolio-stats-list\\">
      <li class=\\"portfolio-stats-account-name\\">In <a href=\\"\\">second account</a> account:</li>
      <li>Total Cash: 161 $</li>
      <li>Total Assets: 5043.56 $</li>
      <li>Portfolio Value: 5204.56 $</li>
    </ul>
  </div>
  <div class=\\"card\\"><span class=\\"card-label\\">Assets</span>
    <div class=\\"assets-overview-content\\">
      <div>5 <a href=\\"#/positions\\">Positions</a> in 2 Accounts</div>
      <div>20 <a href=\\"#/transactions\\">Transactions</a></div>
    </div><a class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary\\" tabindex=\\"0\\" aria-disabled=\\"false\\" href=\\"#/transactions/record\\"><span class=\\"MuiButton-label\\"><span class=\\"material-icons MuiIcon-root\\" aria-hidden=\\"true\\">create</span>Record transaction</span><span class=\\"MuiTouchRipple-root\\"></span></a>
  </div>
</div>"
`;

exports[`portfolio tests shows portfolio overview without any accounts 1`] = `
"<div class=\\"portfolio-overview\\">
  <div class=\\"portfolio-overview-card card\\"><span class=\\"card-label\\">At a glance</span></div>
  <div class=\\"card\\"><span class=\\"card-label\\">Assets</span>
    <div class=\\"assets-overview-content\\">
      <div>0 <a href=\\"#/positions\\">Positions</a> in 0 Account</div>
      <div>0 <a href=\\"#/transactions\\">Transactions</a></div>
    </div><a class=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary\\" tabindex=\\"0\\" aria-disabled=\\"false\\" href=\\"#/transactions/record\\"><span class=\\"MuiButton-label\\"><span class=\\"material-icons MuiIcon-root\\" aria-hidden=\\"true\\">create</span>Record transaction</span><span class=\\"MuiTouchRipple-root\\"></span></a>
  </div>
</div>"
`;
